# deepblast

./: .gitignore  .travis.yml  COPYING.txt  Makefile  README.md  multinode_example.sbatch  repo_EMBED.ipynb  repo_SEARCH.ipynb  repo_TM.ipynb  setup.py  tm_vec_environment.yml  tm_vec_run.py
.ipynb_checkpoints/: repo_EMBED-checkpoint.ipynb  repo_SEARCH-checkpoint.ipynb  repo_TM-checkpoint.ipynb
ci/: conda_requirements.txt  conda_requirements.yml  pip_requirements.txt
data/: zf-C2H2.hmm
deepblast/: alignment.py  constants.py  deepblast-train  deepblast_train.py  embedding.py  language_model.py  launch_pl_worker.bash  losses.py  metrics.py  nw.py  nw_cuda.py  ops.py  pl_worker.bash  score.py  sim.py  sw.py  sw_cuda.py  trainer.py  utils.py  viterbi.py  viterbi_cuda.py
deepblast/cpp/: CMakeLists.txt  jit.py  nw.cpp  setup.py
deepblast/dataset/: __init__.py  utils.py  (+9 more)
example/: launch_tm_vec_run.sh
examples/: simulation.py
ipynb/: simulation-benchmark.ipynb  small-test.ipynb  struct-benchmark.ipynb  test_load_checkpoint.sh
scripts/: deepblast-evaluate  deepblast-mali-align  deepblast-search  deepblast-tensorboard2csv  deepblast-train  deepblast-train.py  embed_structure_model.py  hmm-simulate  tm_vec_run.py  tm_vec_utils.py  train.py
tm_vec/: config.py  data_embed_structure.py  launch_pl_worker_embed_structure.bash  pl_worker_embed_structure.bash  tm_vec_utils.py  train_embed_structure_model.py  utils.py
tm_vec_align/: alignment.py  constants.py  nw.py  nw_cuda.py  ops.py  score.py  sim.py  tm_vec_utils-checkpoint.py  trainer.py  utils.py
tmvec/: alignment.py  nw.py  score.py  trainer.py
(+62 files in other folders)
